--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.23",
+    "expo-font": "^14.0.9",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
