--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.21",
     "@react-navigation/native-stack": "^7.8.0",
-    "expo": "~54.0.23",
+    "expo": "~54.0.25",
     "expo-font": "^14.0.9",
     "expo-splash-screen": "^31.0.11",
     "expo-status-bar": "~3.0.8",
@@ -22,9 +22,10 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-worklets": "^0.6.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
